added button navigates to map

--- a/Pages/admin.cshtml
+++ b/Pages/admin.cshtml
@@ -15,6 +15,7 @@
 </form>
 
 <div class="header-card">
+        <a href="/ffDashboard" class="navigate-map-btn">Navigate to map<i class="fas fa-map"></i></a>
         <a href="/ffDashboard"><div class="logo" style="cursor:pointer;"></div></a>
 
         <div class="profile-section">
