--- a/wwwroot/css/admin.css
+++ b/wwwroot/css/admin.css
@@ -9,6 +9,29 @@ body {
     background-color: #f0f0f0;
     min-height: 100vh;
 }
+.navigate-map-btn { /*nagivate button on the upper right corner*/
+    position: absolute;
+    top: 30px;
+    right: 100px; /*move on the left side of the logo*/
+    background-color: none;
+    border: none;   
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center; 
+}
+.navigate-map-btn:hover, .navigate-map-btn i { /*navigate btn hover effect*/
+    font-weight: 700;
+    transform: translateY(-2px); /* Move button up slightly */
+}
+.navigate-map-btn i { /*navigate btn map icon*/
+    font-size: 14px;
+    color: white; /* Icon color */
+    margin-left: 5px; /* Space between text and icon */
+}
 
 .header-card {
     background-color: #0d2562;
