added button and fixed styles

--- a/Pages/user_account.cshtml
+++ b/Pages/user_account.cshtml
@@ -33,7 +33,10 @@
         <div class="advanced-setting">
             <!-- Checkbox for dropdown toggle -->
             <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
-            <label for="dropdown-toggle" class="dropdown-label">Advanced Setting</label>
+            <label for="dropdown-toggle" class="dropdown-label">
+                Advanced Setting
+                <i class="fas fa-chevron-down dropdown-icon"></i>
+                </label>
             <!-- Dropdown menu items -->
             <div class="dropdown-container">
                 <!-- Change password button (opens modal) -->
