can change password but there are some errors pa

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 @{
-    ViewData["Title"] = "PayFare Homepage";
+    ViewData["Title"] = "PayFair Homepage";
     Layout = "_Layout";
     var userId = HttpContextAccessor.HttpContext?.Session.GetInt32("UserId");
     var isLoggedIn = userId != null;
